plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.12' apply false
    id 'io.spring.dependency-management' version '1.1.7' apply false
}

allprojects {
    group = 'com.sparta.lucky'
    version = '0.0.1-SNAPSHOT'
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'

    java {
        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }

    repositories {
        mavenCentral()
    }

    dependencyManagement {
        imports {
            mavenBom "org.springframework.cloud:spring-cloud-dependencies:2025.0.1"
        }
    }

    // 1. 모든 모듈 공통
    dependencies {
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'
        implementation 'io.micrometer:micrometer-tracing-bridge-brave'
        implementation 'io.zipkin.reporter2:zipkin-reporter-brave'
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
    }

    test {
        useJUnitPlatform()
    }
}

// 2. 일반 서비스용
configure(subprojects.findAll { it.name.endsWith("-service") }) {
    dependencies {
        implementation 'org.springframework.boot:spring-boot-starter-web'
        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
        runtimeOnly 'org.postgresql:postgresql'
        implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
        implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
        implementation 'org.springframework.retry:spring-retry'
        implementation 'org.springframework.boot:spring-boot-starter-aop'
        implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6'
        implementation 'org.springframework.boot:spring-boot-starter-validation'
    }
}

// 3. 게이트웨이 전용
configure(subprojects.findAll { it.name == 'api-gateway' }) {
    dependencies {
        implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
        implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
        implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
        runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
        runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
    }
}

// 4. 유레카 서버 전용
configure(subprojects.findAll { it.name == 'eureka-server' }) {
    dependencies {
        implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server'
        implementation 'org.springframework.boot:spring-boot-starter-actuator'
    }
}

// 5. 공통 라이브러리 모듈 (실행 파일 생성을 막고 일반 Jar로 빌드)
configure(subprojects.findAll { it.name == 'common' }) {
    bootJar { enabled = false }
    jar { enabled = true }
}
